feat: implements get list in band
